# svelte-pdf-viewer

./: README.md  build-for-netlify.sh  rust-toolchain.toml
pdfium/: Cargo.toml
pdfium/pkg/: package.json  pdfium.d.ts  pdfium.js  pdfium_bg.js  pdfium_bg.wasm  pdfium_bg.wasm.d.ts
pdfium/src/: lib.rs
viewer/: jsconfig.json  package-lock.json  package.json  svelte.config.js
viewer/src/: app.html  app.scss
viewer/src/lib/: CurrentPageInput.svelte  Document.svelte  Drawer.svelte  Page.svelte  Thumbnail.svelte  Toolbar.svelte  ToolbarButton.svelte  Viewer.svelte  event-bus.ts  observers.ts  types.ts  utils.ts
viewer/src/lib/backend/: backend.ts  mock.ts  pdfium-js.js  pdfium-worker.ts  pdfium.ts
viewer/src/lib/pdfium/: pdfium-js.js  pdfium.ts  worker.ts
viewer/src/routes/: embedded.svelte  index.svelte
viewer/static/: pdfium.js
